# fast_ipc

./: .gitignore  BUILD.gn  Makefile  README.md  run.py
inc/: fipc.h  fipc_debug.h  fipc_fcntl.h  fipc_poll.h  fipc_select.h
profile/: linux.csv  mac.csv  wsl.csv
src/: eventfd.c  fcntl.c  fdcache.c  internal.h  open.c  operation.c  pipe.c  poll.c  read.c  spin.c  utils.c  write.c
test/: fipc_test.h  function.c  openclose.c  perf.c  readwrite.c  run.py
